<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableViewCalendar"
    android:clickable="true"
    android:focusable="true"
    android:layout_gravity="right"
    android:paddingLeft="3dp"
    android:paddingTop="2dp"
    android:paddingBottom="3dp"
    android:paddingRight="2dp"
    android:focusableInTouchMode="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1,2,3,4,5,6,7" >

    <!-- 
    	这里会有一个警告，提示 TableRow 不必要，因为只有一行内容。但是，日历的其它行是动态添加的，
    		所以这里必须保留，这样 TableHeader 和 TableBody 的列才能对齐。
     -->

    <TableRow
        android:layout_marginBottom="1dp"
        android:background="#E0E0E0"
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        >

        <TextView
             android:background="@drawable/border"
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff3366"
            android:layout_weight="1"
            android:text="@string/sun"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/textView2"
             android:background="@drawable/border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monday"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:gravity="center"
            />

        <TextView
            android:id="@+id/textView3"
             android:background="@drawable/border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuesday"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:gravity="center"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
             android:background="@drawable/border"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wednesday"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:gravity="center"
            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
             android:background="@drawable/border"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thursday"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center" 
            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
             android:background="@drawable/border"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friday"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:gravity="center"
            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:background="@drawable/border"
            android:layout_weight="1"
            android:text="@string/saturday"
            android:textColor="#33cccc"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:gravity="center"
           />

    </TableRow>

</TableLayout>